--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A JavaScript tool that converts Hanyu Pinyin tone numbers to tone marks.",
   "main": "src/pinyinize.js",
   "scripts": {
-    "test": "karma start"
+    "test": "./node_modules/.bin/karma start --browsers Firefox --single-run"
   },
   "repository": {
     "type": "git",
