--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   },
   "homepage": "https://github.com/ericnishio/pinyinize.js",
   "devDependencies": {
-    "karma": "^0.12.21",
+    "karma": "~0.12.21",
     "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "^0.1.4",
-    "grunt": "^0.4.5",
+    "karma-chrome-launcher": "~0.1.4",
+    "grunt": "~0.4.5",
     "grunt-contrib-watch": "~0.6.1",
-    "jit-grunt": "^0.8.0",
-    "grunt-contrib-uglify": "^0.5.1"
+    "jit-grunt": "~0.8.0",
+    "grunt-contrib-uglify": "~0.5.1"
   }
 }
