--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - 0.10.26
 before_script:
-  - sudo npm install -g karma-cli
+  - npm install karma-cli
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
