--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,2 @@
 language: node_js
-node_js:
-  - 0.10.26
-before_script:
-  - npm install karma-cli
-  - npm install karma-firefox-launcher
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+script: mocha
