--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Pinyinize.js",
-  "version": "2.0.0",
-  "description": "A JavaScript tool that converts Hanyu Pinyin tone numbers to tone marks.",
-  "main": "src/pinyinize.js",
+  "name": "pinyinize",
+  "version": "3.0.0",
+  "description": "A JavaScript tool that converts Hanyu pinyin tone numbers to tone marks.",
+  "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/karma start --browsers Firefox --single-run"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,19 +19,13 @@
     "hanzi",
     "hanyu"
   ],
-  "author": "Eric Nishio",
+  "author": "Eric Nishio <eric@self-learner.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ericnishio/pinyinize.js/issues"
-  },
-  "homepage": "https://github.com/ericnishio/pinyinize.js",
   "devDependencies": {
-    "karma": "~0.12.21",
-    "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.4",
-    "grunt": "~0.4.5",
-    "grunt-contrib-watch": "~0.6.1",
-    "jit-grunt": "~0.8.0",
-    "grunt-contrib-uglify": "~0.5.1"
+    "chai": "^2.3.0",
+    "mocha": "^2.2.0"
+  },
+  "dependencies": {
+    "lodash": "^3.10.1"
   }
 }
