--- a/.eslintrc
+++ b/.eslintrc
@@ -64,7 +64,7 @@
     "no-duplicate-case": [2],
     "no-else-return": [0],
     "no-empty": [2],
-    "no-empty-class": [2],
+    "no-empty-character-class": [2],
     "no-empty-label": [2],
     "no-eq-null": [0],
     "no-eval": [2],
@@ -72,7 +72,7 @@
     "no-extend-native": [1],
     "no-extra-bind": [2],
     "no-extra-boolean-cast": [2],
-    "no-extra-parens": [0],
+    "no-extra-parens": [2],
     "no-extra-semi": [1],
     "no-fallthrough": [2],
     "no-floating-decimal": [2],
@@ -122,7 +122,6 @@
     "no-sequences": [2],
     "no-shadow": [2],
     "no-shadow-restricted-names": [2],
-    "no-space-before-semi": [2],
     "no-spaced-func": [2],
     "no-sparse-arrays": [2],
     "no-sync": [0],
@@ -146,7 +145,6 @@
       "location": "start"
     }],
     "no-with": [2],
-    "no-wrap-func": [2],
     "one-var": [0],
     "operator-assignment": [0, "always"],
     "operator-linebreak": [2, "after"],
