--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A tool that converts Hanyu pinyin tone numbers to tone marks.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npm install && mocha",
+    "posttest": "npm run lint",
+    "lint": "eslint index.js lib test"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^2.3.0",
+    "eslint": "^1.2.1",
     "mocha": "^2.2.0"
   },
   "dependencies": {
